--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -206,6 +206,19 @@ nav a {
     padding: 0px 5px;
 }
 /* -----------------FORM DASHBOARD------------------- */
+ #comentarios,
+#usuarios,
+#publicaciones, 
+#reportes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .bienvenida {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
 .vista-reporte {
     font-family: 'Nunito', sans-serif;
     background-image: url('../img/fondo1.png');
@@ -291,9 +304,18 @@ nav a {
     border: 1px solid #9333ff;
 }
 
-.eliminar {
+.btn-eliminar:active {
+    background-color: #9333ff;
+    border: 1px solid #9333ff;
+}
+
+.btn-eliminar {
+    color: #fff;
     background-color: #ff3300;
     border: 1px solid #ff3300;
+    padding: 5px 10px; /* Espaciado interno del enlace */
+    text-decoration: none; /* Quitar subrayado del enlace */
+    border-radius: 5px; 
 }
 
 /* -----------------listas admin------------------- */
@@ -306,7 +328,7 @@ nav a {
   display: flex;
 }*/
 
-.flexible-table td {
+.flexible-table td,thead {
   flex: 1;   
   padding: 8px;
   border: 1px solid #ccc;
