--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -68,21 +68,32 @@
 
     <main >
       
-         <div class="vista-reporte d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+         <div id="reportes" class="vista-reporte d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+             <div class="bienvenida">
+             <h3 class="titulo-principal">¡Bienvenido!</h3>
+            <p>Aquí puedes gestionar y supervisar los reportes de los usuarios de forma rápida y sencilla</p>
+            <h3 class="titulo-principal">Lista de reportes</h3>
+         </div>
              <div class="table-container">
              <table id="custom-table" class="custom-table flexible-table">
         <thead class="sticky-head">
             <tr>
-                <th>ITEM REPORTE</th>
-                <th>CATEGORIA</th>
-                <th>DESCRIPCION</th>
-                <th>ACEPTAR</th>
-                <th>DESESTIMAR</th>
+                <th scope="col">TIPO DE ENTIDAD REPORTADA</th>
+                <th scope="col">ITEM REPORTE</th>
+                <th scope="col">CATEGORIA REPORTE</th>
+                <th scope="col">DESCRIPCION DEL REPORTE</th>
+                <th scope="col">ACEPTAR</th>
+                <th scope="col">DESESTIMAR</th>
 <!--                <th>ELIMINAR</th>                -->
             </tr>
         </thead>
         <tbody th:each="reporte : ${reportes}">
             <tr>
+                <td>
+                    <span th:if="${reporte.usuario != null}" th:text="USUARIO"></span>
+                    <span th:if="${reporte.publicacion != null}" th:text="PUBLICACION"></span>
+                    <span th:if="${reporte.comentario != null}" th:text="COMENTARIO"></span>
+                </td>
                 <td>
                     <span th:if="${reporte.usuario != null}" th:text="${reporte.usuario.nombreCompleto}"></span>
                     <span th:if="${reporte.publicacion != null}" th:text="${reporte.publicacion.id}"></span>
@@ -91,58 +102,27 @@
                 <td th:text="${reporte.categoria}"></td>
                 <td th:text="${reporte.descripcion}"></td>
                 <td>
-                   <a class="btn-dar-baja" href="#" 
-                        data-id="${reporte.usuario.id}" 
-                        data-tipo="${reporte.usuario != null ? 'USUARIO' : (reporte.publicacion != null ? 'PUBLICACION' : (reporte.comentario != null ? 'COMENTARIO' : ''))}">
+                   <a class="btn-dar-baja btn-reporte" href="#" 
+                        th:data-id="${reporte.usuario != null ? reporte.usuario.id : (reporte.publicacion != null ? reporte.publicacion.id : (reporte.comentario != null ? reporte.comentario.id : ''))}" 
+                        th:data-tipo="${reporte.usuario != null ? 'USUARIO' : (reporte.publicacion != null ? 'PUBLICACION' : (reporte.comentario != null ? 'COMENTARIO' : ''))}">
                         Aceptar
                    </a>
                 </td>
-               <td><a class="btn-dar-baja eliminar" th:href= "@{/administrador/reportes_eliminar/__${reporte.id}__}" onclick="return confirm('¿Está seguro de que desea DESESTIMAR el reporte?');">Eliminar </a></td>
-                <td th:if="${reporte.usuario != null}" th:text="${reporte.usuario.id}"></td>    >             
+               <td><a class="btn-eliminar" th:href= "@{/administrador/reportes_eliminar/__${reporte.id}__}" onclick="return confirm('¿Está seguro de que desea DESESTIMAR el reporte?');">Eliminar </a></td>
+          
             </tr>            
         </tbody>
-    </table>    
-             
-  <script>
-    const tableRows = document.querySelectorAll("#custom-table tbody tr");
-
-    tableRows.forEach((row) => {
-        row.addEventListener("mouseover", () => {
-            row.style.backgroundColor = "#ffe1cd";
-        });
-
-        row.addEventListener("mouseout", () => {
-            row.style.backgroundColor = row.classList.contains("even")
-                ? "#f2f2f2"
-                : "#fff";
-        });
-    });
-    
-    const btnDarBaja = document.querySelectorAll(".btn-dar-baja");
-
-    btnDarBaja.forEach((btn) => {
-        btn.addEventListener("click", (event) => {
-            event.preventDefault();
-            const id = btn.getAttribute("data-id");
-            const tipo = btn.getAttribute("data-tipo");
-            
-            console.log("Valor de id:", id)
-            console.log("Valor de tipo:", tipo)
-
-            if (tipo === "USUARIO") {
-                window.location.href = `/administrador/darBajaUsuario/${id}`;
-            } else if (tipo === "PUBLICACION") {
-                window.location.href = `/administrador/darBajaPublicacion/${id}`;
-            } else if (tipo === "COMENTARIO") {
-                window.location.href = `/administrador/darBajaComentario/${id}`;
-            }
-        });
-    });
-    </script>  
+    </table>              
+   
 
     </div>
 </div>
     <div id="usuarios" class="vista-usuarios d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+        <div class="bienvenida">
+        <h3 class="titulo-principal">¡Toma el control! </h3>
+            <p>Desde aquí, puedes realizar diversas acciones como dar de baja, editar, eliminar y analizar datos de los usuarios</p>
+            <h3 class="titulo-principal">Lista de Usuarios</h3>
+    </div>>
       <table class="table table-dark flexible-table">
                     <thead class="encabezado" style="color:#ffc500">
                         <tr>
@@ -196,6 +176,12 @@
     </div>
 
     <div id="publicaciones" class="vista-publicaciones d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+        <div class="bienvenida">
+        <h3 class="titulo-principal">¡El poder está en tus manos!</h3>
+            <p>Recuerda que el contenido de las publicaciones son muy importante para nosotros
+                ; desde aquí, puedes realizar diversas acciones como dar de baja, eliminar y analizar datos de las publicaciones</p>
+            <h3 class="titulo-principal">Lista de publicaciones</h3>
+            </div>
        <table class="table table-dark flexible-table">
                     <thead class="encabezado" style="color:#ffc500">
                         <tr>
@@ -246,7 +232,51 @@
     </div>
 
     <div id="comentarios" class="vista-comentarios d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-      
+       <div class="bienvenida">
+        <h3 class="titulo-principal">¡Eficiencia y control en un solo lugar!</h3>
+        <p>Elimina comentarios innecesarios y destaca aquellos que impulsan el éxito de nuestra plataforma. 
+            Tu análisis permitirá entender mejor a nuestros usuarios y mejorar continuamente sus experiencias. 
+            ¡Adelante, siente el poder de moldear nuestro futuro a través de sus valiosos comentarios! 
+        </p>
+        <h3 class="titulo-principal">Lista de Comentarios</h3>
+    </div>
+      <div class="table-container">           
+             <table id="custom-table" class="custom-table flexible-table">
+        <thead class="sticky-head">
+            <tr>
+                <th scope="col">CONTENIDO</th>
+                <th scope="col">FECHA COMENTARIO</th>
+                <th scope="col">CATEGORIA PUBLICACION</th>
+                <th scope="col">USUARIO</th>
+                <th scope="col">CANTIDAD DE REPORTES</th>
+                <th scope="col">ESTADO</th>
+                <th scope="col">DAR BAJA</th>
+                <th scope="col">ELIMINAR</th>
+            </tr>
+        </thead>
+        <tbody th:each="comentario : ${comentarios}">
+            <tr>
+                <td th:text="${comentario.contenido}"></td>
+                <td th:text="${comentario.fechaComentario}"></td>
+                <td th:each="publicacion : ${comentario.publicacion}">
+                    <span th:each="categoria : ${publicacion.categoria}" th:text="${categoria.nombre}"></span>
+                </td>           
+                <td th:each="usuario : ${comentario.usuario}" th:text="${usuario.nombreCompleto}"></td>
+                 <td><a th:href= "@{/administrador/comentario_reporte_contador/__${comentario.id}__}"></a></td>
+                 <td th:text="${comentario.darBaja}"></td>
+                <td>
+                   <a class="btn-dar-baja" href="#" th:href= "@{/administrador/darBajaComentario/__${comentario.id}__}">
+                        Cambiar
+                   </a>
+                </td>
+               <td><a class="btn-eliminar" th:href= "@{/administrador/comentario_eliminar/__${comentario.id}__}" onclick="return confirm('¿Está seguro de que desea ELIMINAR el comentario?');">Eliminar </a></td>
+          
+            </tr>            
+        </tbody>
+    </table>    
+  
+
+    </div>
     </div>
         
         
@@ -314,6 +344,42 @@
             </footer>
         </div>
     </div>
+    <script>
+    const tableRows = document.querySelectorAll("#custom-table tbody tr");
+
+    tableRows.forEach((row) => {
+        row.addEventListener("mouseover", () => {
+            row.style.backgroundColor = "#ffe1cd";
+        });
+
+        row.addEventListener("mouseout", () => {
+            row.style.backgroundColor = row.classList.contains("even")
+                ? "#f2f2f2"
+                : "#fff";
+        });
+    });
+    
+    const btnDarBaja = document.querySelectorAll(".btn-reporte");
+
+    btnDarBaja.forEach((btn) => {
+        btn.addEventListener("click", (event) => {
+            event.preventDefault();
+            const id = btn.getAttribute("data-id");
+            const tipo = btn.getAttribute("data-tipo");
+            
+            console.log("Valor de id:", id)
+            console.log("Valor de tipo:", tipo)
+
+            if (tipo === "USUARIO") {
+                window.location.href = `/administrador/darBajaUsuario/${id}`;
+            } else if (tipo === "PUBLICACION") {
+                window.location.href = `/administrador/darBajaPublicacion/${id}`;
+            } else if (tipo === "COMENTARIO") {
+                window.location.href = `/administrador/darBajaComentario/${id}`;
+            }
+        });
+    });
+    </script> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
