--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -46,6 +46,9 @@
           <li class="nav-item me-3">
             <a class="nav-link" href="#comentarios">Comentarios</a>
           </li>
+          <li class="nav-item me-3">
+            <a class="nav-link" href="#categorias">Categorias</a>
+          </li>
         </ul>
 
                 <div class="dropdown text-end">
@@ -129,6 +132,7 @@
 <!--                            <th scope="col">Id del Usuario</th>-->
                             <th scope="col">Nombre</th>
                             <th scope="col">Usuario</th>
+                            <th scope="col">Email</th>
                             <th scope="col">Foto de Perfil</th>
                             <th scope="col">Rol</th>
                             <th scope="col">Fecha de alta</th> 
@@ -145,6 +149,7 @@
                             <th scope="row" th:text="${usuario.nombreCompleto}"></th>
 
                             <td th:text="${usuario.nombreUsuario}"></td>
+                            <td th:text="${usuario.email}"></td>
                             <td>
 
                                 <a><img class="avatar" th:if="${usuario.imagen != null}" th:src="@{/imagen/perfil/__${usuario.id}__}" style="width: 50px ;
@@ -278,9 +283,14 @@
 
     </div>
     </div>
-     <div id="categorias" class="vista-publicaciones d-flex justify-content-center align-items-left" style="min-height: 100vh;">
+     <div id="categorias" class="vista-publicaciones d-flex justify-content-center align-items-center " style="min-height: 100vh; flex-direction: column">
+         <div class="bienvenida ">
+             <h3 class="titulo-principal">¡Todas las Categorias!</h3>
+            <p>Aquí puedes ver todas las Categorias, eliminar y Crear Nuevas Categorias segun se requiera.</p>
+            <h3 class="titulo-principal">Lista de Categorias</h3>
+         </div>
          <div>
-         <table class="table table-dark flexible-table">
+         <table class="table table-dark flexible-table" >
                     <thead class="encabezado" style="color:#ffc500">
                         <tr>
 
