--- a/backend/src/main/resources/templates/usuario_modificar.html
+++ b/backend/src/main/resources/templates/usuario_modificar.html
@@ -22,7 +22,7 @@
                     <h4>Editar Perfil</h4>
                 </div>
                 <form class="row" th:action="@{/perfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data">
-                         <input hidden th:value="${id}" name="id">
+                    <input hidden th:value="${id}" name="id">
                     <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError">
                         <div class="card-body">
                             <h6 class="card-title">Error 👎</h6>
@@ -32,37 +32,39 @@
 
                     <div class="col-md-6  mb-2">
                         <label for="inputNombre" class="form-label">Nombre (*)</label>
-                        <input type="text" name="nombreCompleto" class="form-control form-control-sm" th:value="${usuario.nombreCompleto}" id="inputNombre"
-                            required>
+                        <input type="text" name="nombreCompleto" class="form-control form-control-sm"
+                            th:value="${usuario.nombreCompleto}" id="inputNombre" required>
                     </div>
                     <div class="col-md-6  mb-2">
                         <label for="inputUsername" class="form-label">Username (*)</label>
-                        <input type="text" name="nombreUsuario" th:value="${usuario.nombreUsuario}" class="form-control form-control-sm" id="inputUsername"
-                            required>
+                        <input type="text" name="nombreUsuario" th:value="${usuario.nombreUsuario}"
+                            class="form-control form-control-sm" id="inputUsername" required>
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="inputEmail" class="form-label">Email (*)</label>
-                        <input type="email" name="email" th:value="${usuario.email}" class="form-control form-control-sm" id="inputEmail" required>
+                        <input type="email" name="email" th:value="${usuario.email}"
+                            class="form-control form-control-sm" id="inputEmail" required>
                     </div>
                     <div class="col-md-6 mb-2">
                         <label for="inputPassword1" class="form-label">Contraseña (*)</label>
-                        <input type="password" name="password" th:value="${password}"  class="form-control form-control-sm" id="inputPassword1"
-                            required>
+                        <input type="password" name="password" th:value="${password}"
+                            class="form-control form-control-sm" id="inputPassword1" required>
                         <div id="passwordHelpBlock" class="form-text">
                             La contraseña debe tener mínimo 5 caracteres
                         </div>
                     </div>
                     <div class="col-md-6 mb-2">
                         <label for="inputPassword2" class="form-label">Confirmar contraseña (*)</label>
-                        <input type="password" name="password2" th:value="${password2}" class="form-control form-control-sm" id="inputPassword2"
-                            required>
+                        <input type="password" name="password2" th:value="${password2}"
+                            class="form-control form-control-sm" id="inputPassword2" required>
                         <div id="passwordMatchMessage" class="form-text" style="display: none;">
                             Las contraseñas coinciden
                         </div>
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="formFile" class="form-label">Adjunta foto de perfil</label>
-                        <input class="form-control form-control-sm" name="archivo" type="file" id="formFile"  th:value="@{/imagen/perfil/__${usuario.id}__}" >
+                        <input class="form-control form-control-sm" name="archivo" type="file" id="formFile"
+                            th:value="@{/imagen/perfil/__${usuario.id}__}">
                     </div>
                     <div class="col-md-12">
                         <span>Seleccione cómo desea registrarse (*):</span>
@@ -83,19 +85,19 @@
                             </div>
                         </div>
                         <div class="form-check col-md-6">
-                                <input class="form-check-input" type="radio" name="rol" th:value="${rol}"
-                                    id="flexRadioDefault2" required>
-                                <label class="form-check-label" for="flexRadioDefault2">
-                                    No cambiar rol
-                                </label>
-                            </div>
+                            <input class="form-check-input" type="radio" name="rol" th:value="${rol}"
+                                id="flexRadioDefault2" required>
+                            <label class="form-check-label" for="flexRadioDefault2">
+                                No cambiar rol
+                            </label>
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-registrar d-block" style="width: 100%;">Enviar</button>
                 </form>
                 <div class="links-footer text-center TyC">
                     Al hacer click en Enviar usted acepta nuestros términos y condiciones y política de privacidad
                     <hr>
-<!--                    <p>Ya tienes una cuenta?<a href="/login"> Ingresa aquí!</a></p>-->
+                    <!--                    <p>Ya tienes una cuenta?<a href="/login"> Ingresa aquí!</a></p>-->
                 </div>
             </div>
         </div>
