--- a/backend/src/main/resources/templates/publicacion_detalle.html
+++ b/backend/src/main/resources/templates/publicacion_detalle.html
@@ -101,17 +101,6 @@
                                                  height="35" class="d-inline-block rounded-circle" id="img-cover" />
                                             <span th:text="${publicacion.usuario.nombreUsuario}"></span>
                                         </div>
-                                        <div class="col-2">
-                                            <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
-                                                <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
-                                                </svg>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-end">
-                                                <li><a class="dropdown-item" href="/disenador/reportar">Reportar</a></li>
-                                                <li><a class="dropdown-item" href="#">Cerrar</a></li>
-                                            </ul>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -120,11 +109,15 @@
                                     <img th:src="@{/imagen/perfil/__${comentario.usuario.id}__}" alt="foto-perfil" width="35"
                                          height="35" class="rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'"/>
                                     <p class="card-text" th:text="${comentario.contenido}"></p>
-                                    <button type="button" class="btn btn-outline-secondary" style="border-color: #dee2e6;">
-                                        <a class="dropdown-item" th:href="@{/reportarComentario_publicacion/__${publicacion.id}__}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-lg" viewBox="0 0 16 16">
-                                            <path d="M7.005 3.1a1 1 0 1 1 1.99 0l-.388 6.35a.61.61 0 0 1-1.214 0L7.005 3.1ZM7 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"/>
-                                            </svg></a>
+                                    <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+                                        <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
+                                        </svg>
                                     </button>
+                                    <ul class="dropdown-menu dropdown-menu-end">
+                                        <li><a class="dropdown-item" href="/disenador/reportar">Reportar</a></li>
+                                        <li><a class="dropdown-item" href="#">Cerrar</a></li>
+                                    </ul>
                                 </div>
                             </div>
                             <div style="background-color: rgba( 33,37,41 , 0.03); padding: 20px; border-top: 1px rgba(0, 0, 0, 0.175) solid; width: -webkit-fill-available;
@@ -152,6 +145,7 @@
                                 </div>
                                 <p class="card-text" style="margin-top: 5px;"><small class="text-body-secondary" th:text="${#dates.format(publicacion.fechaPublicacion, 'dd-MMM-yyyy')}"></small></p>
                                 <form th:action="@{/comentario/crearComentario}" method="post">
+                                    <input hidden th:value="${publicacion.id}" name="idPublicacion">
                                     <div class="input-group mb-3">
 
                                         <span class="input-group-text" id="basic-addon1"><img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="foto-perfil" width="35"
